Fixed spacing issue in results page for h3

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 * {
-   /*outline: 1px red solid;*/
+   /*outline: 1px red solid; */
    font-family: 'Open Sans', arial, sans-serif;
 }
 
@@ -195,6 +195,7 @@ footer p {
 
 .cleanerList h3 {
     color: #303238;
+    margin-top: 10px;
 }
 
 .credentialsList ul li span {
